--- a/Housing_Price_Report.ipynb
+++ b/Housing_Price_Report.ipynb
@@ -2497,7 +2497,7 @@
    ],
    "source": [
     "\n",
-    "# Sau khi xác định số cụm phù hợp là 5, ta tiến hành xây dựng mô hình K-means\n",
+    "# Sau khi xác định số cụm phù hợp (3), ta tiến hành xây dựng mô hình K-means\n",
     "from sklearn.cluster import KMeans\n",
     "Km = KMeans(n_clusters = 3, random_state = 42)\n",
     "Km.fit(data_transform)\n",
